# CGL

./: .gitmodules  CMakeLists.txt
src/: game.cpp  game.h  main.cpp  size_utils.cpp  size_utils.h  state.h
